<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_repertoire"
            android:icon="@drawable/ic_repertoire"
            android:title="@string/repertoire" />
        <item
            android:id="@+id/nav_spectacle"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/spectacle" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_events"
                android:title="@string/events" />
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_news"
                android:title="@string/news" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map"
                android:title="@string/map" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login_red"
                android:title="@string/log_in" />
        </menu>
    </item>

</menu>
