<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABABA9">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aktualnoscimini_tv1"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@color/tlo"
                android:gravity="center"
                android:onClick="aktualnosciButton"
                android:text="@string/aktualnoscimini_tv1"
                android:textColor="@color/pinktext"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/aktualnoscimini_tv1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/tlo"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ll1_img1"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:background="@color/tlo"
                            android:contentDescription="@string/clockicon"
                            app:srcCompat="@drawable/clock" />

                        <TextView
                            android:id="@+id/ll1_tv1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:text="@string/aktualnoscimini_ll_tv1"
                            android:textAlignment="viewStart"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ll1_tv2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginBottom="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/ll1_tv2" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@color/tlo"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ll2_img1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="18dp"
                            android:background="@color/tlo"
                            android:contentDescription="@string/megaphoneicon"
                            app:srcCompat="@drawable/megaphone" />

                        <TextView
                            android:id="@+id/ll2_tv1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:text="@string/aktualnoscimini_ll2_tv1"
                            android:textAlignment="viewStart"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ll2_tv2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="12dp"
                            android:layout_marginBottom="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/aktualnoscimini_ll2_tv2" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:background="@color/tlo"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ll3_img1"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="18dp"
                            android:background="@color/tlo"
                            android:contentDescription="@string/messageicon"
                            app:srcCompat="@drawable/haze" />

                        <TextView
                            android:id="@+id/ll3_tv1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:text="@string/aktualnoscimini_ll3_tv1"
                            android:textAlignment="viewStart"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ll3_tv2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:maxLines="3"
                            android:paddingBottom="8dp"
                            android:text="@string/ll3_tv2" />

                        <ImageButton
                            android:id="@+id/show"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/arrowdown"
                            android:clickable="true"
                            android:contentDescription="@string/arrowdown"
                            android:focusable="true" />

                        <ImageButton
                            android:id="@+id/hide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/arrowup"
                            android:clickable="true"
                            android:contentDescription="@string/arrowup"
                            android:focusable="true"
                            android:visibility="gone" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>