<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tlo">

    <ImageView
        android:id="@+id/biletyBanner"
        android:layout_width="wrap_content"
        android:layout_height="203dp"
        android:contentDescription="@string/biletybanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bilety" />

    <TextView
        android:id="@+id/bilety_tv1"
        android:layout_width="115dp"
        android:layout_height="29dp"
        android:layout_marginTop="136dp"
        android:background="#D81C5C"
        android:gravity="center"
        android:text="@string/bilety_tv1"
        android:textColor="#FAFDFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bilety_tv2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/anaheim"
        android:gravity="center_horizontal"
        android:text="@string/bilety_text"
        android:textColor="@android:color/background_dark"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/biletyBanner"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>